# GiellaLTGramTools

./: README.md  pyproject.toml
giellaltgram/: gramcheck_comparator.py  gramcheck_test.py  make_grammarchecker_zip.py
giellaltgramtools/: alloutput.py  asr_gramcheck.py  candidates.py  common.py  compactoutput.py  comparator.py  compare.py  corpus_config.py  corpus_gramchecker.py  corpus_gramtest.py  count_tests.py  divvun_checker_fixes.py  divvun_runtime_fixes.py  errordata.py  errordatas.py  finaloutput.py  gramcheck_test.py  gramchecker.py  grammar_error_annotated_sentence.py  gramtest.py  gramtool.py  make_grammarchecker_zip.py  nooutput.py  normaloutput.py  runtime_parser.py  terseoutput.py  testdata.py  yaml_config.py  yaml_gramchecker.py  yaml_gramtest.py  yaml_test_file.py
tests/: test_checker_to_markup.py  test_divvun_runtime_fixes.py  test_error_annotated_sentence_to_grammar_error_annotated_sentence.py  test_error_markup_to_error_data.py  test_gramcheck_comparator.py  test_punct.py  test_runtime_parser.py
