[tool.poetry]
name = "GiellaLTGramTools"
version = "1.5.0"
description = "Package and test grammar files for the GiellaLT project"
authors = ["Børre Gaup <albbas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
corpustools = {git = "https://github.com/giellalt/CorpusTools"}
click = "^8.1.7"
lxml = "^5.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.8.0"
types-lxml = "^2024.2.9"
types-pyyaml = "^6.0.12.12"
pytest = "^8.3.2"

[tool.poetry.scripts]
gtgramtool="giellaltgramtools.gramtool:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", #Pyflakes
    "B", #flake8-bugbear
    "A", #flake8-builtins 
    "C4", #flake8-comprehensions
    "ERA", #eradicate
    "I", #isort
    "PT", #flake8-pytest-style
    "C90", #mccabe
    "N", #pep8-naming
    "E", #pycodestyle error
    "PL" #Pylint
]
ignore = ["A003"]
